removed the slash

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jasons Talks
-baseurl: https://jsntn.github.io/talks/
+baseurl: https://jsntn.github.io/talks
 author: Jason
 email: hi@jsntn.com
 description: > # this means to ignore newlines until "baseurl:"
